# const_str

./: .gitignore  CMakeLists.txt  README.md
include/const_str/: const_str.hpp
src/: CMakeLists.txt
tests/: testlib.cpp
tests/src/: CMakeLists.txt  main.cpp  test_const_str.cpp
